fixing title overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -202,7 +202,6 @@ a {
     height:1.2em;
     text-align:center;
     background-color: rgba(0,0,0,0.3);
-    overflow: hidden;
     text-overflow: ellipsis;
 }
 .progress-box .amount {
